--- a/assets/index.html
+++ b/assets/index.html
@@ -25,7 +25,7 @@
             <input type = "text" autocomplete="off" class = "search-box" placeholder = "Search for a City" />
                 <section class = "location">
                 <div class = "city">Dallas, TX</div>
-                <div class = "date"> </div>
+                <div class = "date">June 15th, 2020</div>
         </section>
     </div>
     </main>
